aula 06 melhorias no banner

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,2 +1,6 @@
 @import url(./cabecario/cabevario.css);
 @import url(./menu/menu.css);
+
+@import url(./banner/banner.css);
+
+@import url(./sobre/sobre.css);
