--- a/assets/css/banner/banner.css
+++ b/assets/css/banner/banner.css
@@ -2,8 +2,9 @@
     position: relative;
 }
 .banner__imagem{
-    width: 100%;
+    background: url('../../img/banner.jpg') no-repeat center / cover;
     height: calc( 100vh - 72px );
+    width: 100%;
 }
 .banner__titulo{
     color: #fdfdfd;
