--- a/assets/css/banner/banner.css
+++ b/assets/css/banner/banner.css
@@ -3,13 +3,11 @@
 }
 .banner__imagem{
     background: url('../../img/banner.jpg') no-repeat center / cover;
-    height: calc( 100vh - 72px );
     width: 100%;
 }
 .banner__titulo{
     color: #fdfdfd;
     font-family: Pacifico, cursive;
-    font-size: 5.0652rem;
     position: absolute;
     left: 50%;
     top:50%;
@@ -17,4 +15,23 @@
     text-align: center;
     transform: translate( -50%, -50%);
     width: 100%;
+}
+
+@media screen and (min-width:0) {
+    .banner__titulo{
+        font-size: 2rem;
+    }
+    .banner__imagem{
+        height: calc( 100vh - 275px );
+
+    }
+}
+@media screen and (min-width:768px) {
+    .banner__titulo{
+        font-size: 5.0652rem;
+    }
+    .banner__imagem{
+        height: calc( 100vh - 72px );
+
+    }
 }
