--- a/assets/css/quem-somos/quem-somos.css
+++ b/assets/css/quem-somos/quem-somos.css
@@ -1,7 +1,5 @@
 .quem-somos{
     text-align: center;
-    padding: 5rem;
-
 }
 .quem-somos__titulo{
      color: #8D0606;  
@@ -26,7 +24,6 @@
 .pessoa{
  display: flex;
  flex-direction: column;
-
 }
 .pessoa__imagem {
     background-repeat: no-repeat;
@@ -34,8 +31,6 @@
     background-position: center;
     border-radius: 100%;
     margin: 0 auto;
-    width: 300px;
-    height: 300px;
 }
 .pessoa__nome{
     color: #8D0606;
@@ -61,5 +56,36 @@
 
 .pessoa__imagem--andreia{
     background-image: url('../../img/pessoas/andreia.jpg');
+
+}
+
+
+@media screen and (min-width:0) {
+    .quem-somos{
+        padding: 2rem;
+    }
+    .pessoas{
+        flex-direction: column;
+        gap:30px;
+    }
+    .pessoa__imagem {
+        width: 150px;
+        height: 150px;
+    }
+
+}
+@media screen and (min-width:768px) {
+    .quem-somos{
+        padding: 5rem;
+    }
+    .pessoas{
+        flex-direction: row;
+        gap:0;
+    }
+
+    .pessoa__imagem {
+        width: 300px;
+        height: 300px;
+    }
 
 }
