--- a/assets/css/receitas/receitas.css
+++ b/assets/css/receitas/receitas.css
@@ -1,5 +1,4 @@
 .receitas{
- padding: 5rem;
  background: #e5e5e5;
  display: flex;
  flex-wrap: wrap;
@@ -9,16 +8,12 @@
 
 .receita{
  background: #fff;
- width: 25%;
  border: 1px solid #C4C4C4;
 }
 .receita__imagem{
     width: 100%;
     height: 200px;
     
-}
-.receita__conteudo{
-    padding: 1.2rem;
 }
 
 .receita__titulo{
@@ -47,4 +42,41 @@
 .receita__botao:hover{
     background: #770404;
     cursor: pointer;
-   }
+}
+
+@media screen and (min-width:0) {
+    .receitas{
+        padding: 2rem;
+        gap: 25px;
+        }
+    .receita{
+        width: auto;
+    }
+    .receita__conteudo{
+        padding: .5rem;
+    }
+}
+@media screen and (min-width:430px) {
+    .receitas{
+        padding: 2rem;
+        gap: 50px;
+        }
+    .receita{
+        width: 50%;
+    }
+    .receita__conteudo{
+        padding: 1.2rem;
+    }
+}
+@media screen and (min-width:768px) {
+    .receitas{
+        padding: 2rem;
+        gap: 100px;
+        }
+    .receita{
+        width: 25%;
+    }
+    .receita__conteudo{
+        padding: 1.2rem;
+    }
+}
