--- a/assets/css/rodape/rodape.css
+++ b/assets/css/rodape/rodape.css
@@ -10,13 +10,36 @@
 
 .rodape__titulo{
     color: #ffffff;
-    font-size: 1.5rem;
     font-weight: 400;
     text-transform: lowercase;
 }
 
 .rodape__quadrado{
     background: #8D0606;
-    height: 3.7rem;
-    width: 3.7rem;
+}
+
+@media screen and (min-width:0) {
+    .rodape{
+        padding: 1rem 2rem;
+     }
+     .rodape__titulo {
+        font-size: .8rem;
+     }
+     .rodape__quadrado{
+        height: 1.5rem;
+        width: 1.5rem;
+    }
+}
+@media screen and (min-width:768px) {
+    .rodape{
+       padding: 1rem 5rem;
+    }
+    .rodape__titulo {
+        font-size: .8rem;
+        font-size: 1.5rem;
+     }
+     .rodape__quadrado{
+        height: 3.7rem;
+        width: 3.7rem;
+    }
 }
