--- a/assets/css/sobre/sobre.css
+++ b/assets/css/sobre/sobre.css
@@ -1,15 +1,36 @@
 .sobre{
     text-align: center;
-    padding: 2.5rem;
 }
 .sobre__titulo{
     color : #8d0606;
     font-family: Pacifico, cursive;
-    font-size: 3.1875rem;
 }
 .sobre__texto{
     color:#595959;
-    font-size: 1.75rem;
-    font-weight: 100;
+}
+
+@media screen and (min-width:0) {
+    .sobre{
+        padding: 1.5rem 1rem;
+    }
+    .sobre__titulo{
+        font-size: 1.8rem;
+    }
+    .sobre__texto{
+    font-size: 1rem;
+    font-weight: 400;
+    }
+}
+@media screen and (min-width:768px) {
+    .sobre{
+        padding: 2.5rem;
+    }
+    .sobre__titulo{
+        font-size: 3.1875rem;
+    }
+    .sobre__texto{
+        font-size: 1.75rem;
+        font-weight: 100;
+    }
 
 }
