--- a/assets/css/quem-somos/quem-somos.css
+++ b/assets/css/quem-somos/quem-somos.css
@@ -84,6 +84,36 @@
     }
 
     .pessoa__imagem {
+        width: 200px;
+        height: 200px;
+    }
+
+}
+@media screen and (min-width:920px) {
+    .quem-somos{
+        padding: 5rem;
+    }
+    .pessoas{
+        flex-direction: row;
+        gap:0;
+    }
+
+    .pessoa__imagem {
+        width: 220px;
+        height: 220px;
+    }
+
+}
+@media screen and (min-width:1000px) {
+    .quem-somos{
+        padding: 5rem;
+    }
+    .pessoas{
+        flex-direction: row;
+        gap:0;
+    }
+
+    .pessoa__imagem {
         width: 300px;
         height: 300px;
     }
